fixed contacts block on mobile resolutions

--- a/src/scss/social.scss
+++ b/src/scss/social.scss
@@ -28,4 +28,13 @@
       }
     }
   }
+
+  @media (max-width: 576px) {
+    .margin-top-section-reset {
+      margin-top: 0 !important;
+    }
+    .top-banner {
+      display: none;
+    }
+  }
   
